--- a/src/main/resources/public/css/general.css
+++ b/src/main/resources/public/css/general.css
@@ -29,3 +29,26 @@ h1 {
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
+.code {
+    background-color: #2A2A2A;
+    color: whitesmoke;
+    padding: 5px;
+    margin: 0px;
+    border-radius: 5px;
+    font-weight: 700;
+}
+
+.btn {
+    background-color: #e3e0fc;
+    color: black;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    width: 100%;
+    font-weight: 500;
+}
+
+.btn:hover {
+    background-color: #24104F;
+}
