--- a/src/main/resources/public/css/general.css
+++ b/src/main/resources/public/css/general.css
@@ -30,12 +30,13 @@ h1 {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 .code {
-    background-color: #2A2A2A;
-    color: whitesmoke;
+    background-color: #EEE;
+    color: black;
     padding: 5px;
     margin: 0px;
     border-radius: 5px;
-    font-weight: 700;
+    font-weight: 400;
+    border: 1px solid #aaa;
 }
 
 .btn {
