--- a/src/main/resources/public/css/general.css
+++ b/src/main/resources/public/css/general.css
@@ -33,21 +33,23 @@ h1 {
     background-color: #EEE;
     color: black;
     padding: 5px;
-    margin: 0px;
+    margin: 5px;
     border-radius: 5px;
     font-weight: 400;
     border: 1px solid #aaa;
+    display: inline-block;
 }
 
 .btn {
-    background-color: #e3e0fc;
-    color: black;
+    background-color: #6551F3;
+    color: white;
     padding: 10px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     width: 100%;
     font-weight: 500;
+    margin: 5px 0;
 }
 
 .btn:hover {
